--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="navb_tell">
               <a class="nav_link" href="tel:0942-53-4022"
                 ><i class="fas fa-phone-alt"></i>0942-53-4022
-                <p>Lorem, ipsum.</p>
+                <p>Lorem, ipsum</p>
               </a>
             </div>
             <div class="navb_mail">
