--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <img class="df" data-aos="fade-up" data-aos-duration="1000" src="./img/MV_txt.png" alt="" />
             <img class="dn" data-aos="fade-up" data-aos-duration="1000" src="./img/MV_txt_sp.png" alt="" />
             <div class="btny">
-              <a href="#">Lorem, ipsum dolor. hello jeck</a>
+              <a href="#">Lorem, ipsum dolor hello jeck</a>
             </div>
           </div>
         </div>
