--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       <div class="container">
         <div class="row">
           <div class="tx" data-aos="fade-up" data-aos-duration="3000">
-            ご安心ください！！ P.W.J.なら全て解消します！！
+            ご安心ください！！ P.W.J.なら全て解消します！
           </div>
           <div class="btny">
             <a href="#">Lorem, ipsum dolor. hello jeck</a>
