--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             ご安心ください！！ P.W.J.なら全て解消します！
           </div>
           <div class="btny">
-            <a href="#">Lorem, ipsum dolor. hello jeck</a>
+            <a href="#">Lorem, ipsum dolor hello jeck</a>
           </div>
         </div>
       </div>
