--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     <section id="flow">
       <div class="container">
         <div class="row">
-          <div class="tx">ご利用の流れ</div>
+          <div class="tx">ご利用の流れ.</div>
           <div class="img1">
             <img
               data-aos="fade-up"
