--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             /></span>
           </div>
           <div class="btny">
-            <a href="#">Lorem ipsum dolor. hello jeck</a>
+            <a href="#">Lorem ipsum dolor. hello jeck.</a>
           </div>
         </div>
       </div>
