--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
           </div>
           <p>
             ※入国をして3年間日本に滞在します。入国をして1ヵ月間の講習がありますので、実習出来る期間は2年11ヵ月となります。
-            ※1年目と3年目に職種ごとの技能検定試験があります。しっかりサポートしますので、ご安心ください。
+            ※1年目と3年目に職種ごとの技能検定試験があります。しっかりサポートしますので、ご安心ください。.
           </p>
           <div class="img2">
             <img
