--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
           </div>
           <p>
             ※建設関係は、要件を満たすことが出来れば、3年間毎にずっと更新が出来ます。
-            ※特定技能をご希望の場合は、全国トップクラスのコスパで、九州トップクラスの実績がある登録支援機関の㈱アクセス・ジャパン様をご紹介いたします。.
+            ※特定技能をご希望の場合は、全国トップクラスのコスパで、九州トップクラスの実績がある登録支援機関の㈱アクセス・ジャパン様をご紹介いたします。
           </p>
           <div class="btny">
             <a href="#">Lorem, ipsum dolor. hello jeck</a>
