--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
     <section id="work">
       <div class="container">
         <div class="row">
-          <span class="tx">Hello world!</span>
+          <span class="tx">Hello world</span>
           <h3>受入が出来る職種が決まっております</h3>
           <div class="cards">
             <div class="card_item" data-aos="fade-up" data-aos-duration="1000">
